fix footer spacing

--- a/css/style.css
+++ b/css/style.css
@@ -506,10 +506,10 @@ footer {
     height: 90px;
     flex-shrink: 0;
     padding: 25px 50px;
-    border-top: 10px rgba(0, 0, 0, 0) solid;
+    border-top: 1px rgba(0, 0, 0, 0) solid;
     background-color: #000000;
     background-size: 200px 200px, 200px 200px, 40px 40px, 40px 40px;
-    background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
+    background-position: -2px -2px, -2px -2px, -1px 39px, -1px -1px;
     background-image: linear-gradient(white 1px, transparent 1px),
         linear-gradient(90deg, rgba(255, 255, 255, .0) 1px, transparent 1px),
         /*up/down*/
